# holochat

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md  config.json  holochat_settings.json  holochat_settings_schema.json  pyproject.toml  settings_schema.json
.github/workflows/: main.yml  run-ci-tests-python.yml
holochat/: __main__.py  cli.py  main.py  models.py  settings.py
scripts/: httpx_data_poster.py  httpx_request_tester.py  post_demo.py  request_timings_auto.py  request_timings_manual.py
templates/: index.html
tests/: conftest.py  test_api.py  test_settings.py
