[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holochat"
version = "0.2.0"
description = "A tools for facilitating communication between multiple computers during experiments."
authors = [
    {name = "Will Hendricks", email = "hendricksw@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn[standard]"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "rich",
    "httpx",
    "pytest",
    "pyfakefs",
    "pytest-cov"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]