[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "holochat"
version = "0.3.3"
description = "A tools for facilitating communication between multiple computers during experiments."
authors = [
    {name = "Will Hendricks", email = "hendricksw@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
    "jinja2",
    "httpx",
    "colorama",
]
requires-python = ">=3.11"

[project.optional-dependencies]
tests = [
    "pytest",
    "pyfakefs",
    "pytest-cov"
]
dev = [
    "holochat[tests]",
    "rich"
]

[project.scripts]
holochat = "holochat.cli:run_holochat"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
markers = [
    "slow: marks tests as slow",
    "api: marks tests as api tests",
    "settings: marks tests as settings tests"
]

[tool.hatch.build.targets.wheel]
include = [
    "holochat/*",
    "templates/index.html",
    "logo/*.jpg"
]